--- a/index.html
+++ b/index.html
@@ -1,25 +1,85 @@
 <html>
-	<head>
-		<title>Arithmetic</title>
-	</head>
-	<body>
-		<h2>Arithmetic</h2>
-		<input type="number" id="num1">
+
+<head>
+	<title>Arithmetic</title>
+</head>
+
+<body>
+	<h2>Arithmetic</h2>
+	<div>
+		<input type="number" id="add1">
 		<label>+</label>
-		<input type="number" id="num2">
+		<input type="number" id="add2">
 		<button onclick="add()">=</button>
 		<label id="sum"></label>
 		<script>
-			async function add(){
-				let num1 = document.getElementById("num1");
-				let num2 = document.getElementById("num2");
-				let n = num1.value;
-				let m = num2.value;
-				
-				const response = await fetch("http://localhost:3000/add/" + n + "/" + m);
+			async function add() {
+				let n = document.getElementById("add1");
+				let m = document.getElementById("add2");
+				console.log("button pressed:" + n.value + "+" + m.value);
+
+				const response = await fetch("https://arithmetic-service-hzd7.onrender.com/add/" + n.value + "/" + m.value);
 				const sum = await response.json();
 				document.getElementById("sum").innerText = sum;
 			}
 		</script>
-	</body>
+	</div>
+	<br/>
+	<div>
+		<input type="number" id="sub1">
+		<label>-</label>
+		<input type="number" id="sub2">
+		<button onclick="subtract()">=</button>
+		<label id="diff"></label>
+		<script>
+			async function subtract() {
+				let n = document.getElementById("sub1");
+				let m = document.getElementById("sub2");
+				console.log("button pressed:" + n.value + "-" + m.value);
+
+				const response = await fetch("http://localhost:3001/sub/" + n.value + "/" + m.value);
+				const diff = await response.json();
+				document.getElementById("diff").innerText = diff;
+			}
+		</script>
+	</div>
+	<br/>
+	<div>
+		<input type="number" id="mul1">
+		<label>*</label>
+		<input type="number" id="mul2">
+		<button onclick="multiply()">=</button>
+		<label id="prod"></label>
+		<script>
+			async function multiply() {
+				let n = document.getElementById("mul1");
+				let m = document.getElementById("mul2");
+				console.log("button pressed:" + n.value + "*" + m.value);
+
+				const response = await fetch("http://localhost:3001/mul/" + n.value + "/" + m.value);
+				const prod = await response.json();
+				document.getElementById("prod").innerText = prod;
+			}
+		</script>
+	</div>
+	<br/>
+	<div>
+		<input type="number" id="div1">
+		<label>/</label>
+		<input type="number" id="div2">
+		<button onclick="divide()">=</button>
+		<label id="quot"></label>
+		<script>
+			async function divide() {
+				let n = document.getElementById("div1");
+				let m = document.getElementById("div2");
+				console.log("button pressed:" + n.value + "/" + m.value);
+
+				const response = await fetch("http://localhost:3001/div/" + n.value + "/" + m.value);
+				const quot = await response.json();
+				document.getElementById("quot").innerText = quot;
+			}
+		</script>
+	</div>
+</body>
 </html>
