--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 	<title>Arithmetic</title>
 	<style>
-        .column {
-           float: left;
-           width: 50%;
-           padding: 10px;
-           box-sizing: border-box;
-          
-        }
-        .row::after {
-           content: "";
-           clear: both;
-           display: table;
-        }
-     </style>
+		.column {
+			float: left;
+			width: 50%;
+			padding: 10px;
+			box-sizing: border-box;
+		}
+
+		.row::after {
+			content: "";
+			clear: both;
+			display: table;
+		}
+	</style>
 </head>
 
 <body>
@@ -29,20 +29,7 @@
 				<button onclick="add()">=</button>
 				<label id="sum"></label>
 			</section>
-		</div>
-		<div class="column">
-			<section>
-				<h2>Prime check</h2>                
-				<label>Number to test:</label>
-				<input id="numberToTest"/>
-				<button onclick="isPrime()">Check</button>
-				<label id="primeCheckResult"></label>  
-			</section>           
-		</div> 
-	</div>
-	<br/>
-	<div class="row">
-		<div class="column">
+			<br/>
 			<section>
 				<input type="number" id="sub1">
 				<label>-</label>
@@ -50,90 +37,109 @@
 				<button onclick="subtract()">=</button>
 				<label id="diff"></label>
 			</section>
+			<br/>
+			<section>
+				<input type="number" id="mul1">
+				<label>*</label>
+				<input type="number" id="mul2">
+				<button onclick="multiply()">=</button>
+				<label id="prod"></label>
+			</section>
+			<br/>
+			<section>
+				<input type="number" id="div1">
+				<label>/</label>
+				<input type="number" id="div2">
+				<button onclick="divide()">=</button>
+				<label id="quot"></label>
+			</section>
 		</div>
 		<div class="column">
 			<section>
-				<h2>Caesar cipher</h2>                
+				<h2>Prime check</h2>
+				<label>Number to test:</label>
+				<input id="numberToTest" />
+				<button onclick="isPrime()">Check</button>
+				<label id="primeCheckResult"></label>
+			</section>
+		</div>
+	</div>
+	<br />
+	<div class="row">
+		<div class="column">
+
+		</div>
+		<div class="column">
+			<section>
+				<h2>Caesar cipher</h2>
 				<label>Text:</label>
-				<input id="textToCipher"/>
+				<input id="textToCipher" />
 				<button onclick="cipher()">Check</button>
-				<label id="cipher"></label>  
-			</section>           
-		</div> 
+				<label id="cipher"></label>
+			</section>
+		</div>
 	</div>
-	<br/>
-	<div>
-		<input type="number" id="mul1">
-		<label>*</label>
-		<input type="number" id="mul2">
-		<button onclick="multiply()">=</button>
-		<label id="prod"></label>
-	</div>
-	<br/>
-	<div>
-		<input type="number" id="div1">
-		<label>/</label>
-		<input type="number" id="div2">
-		<button onclick="divide()">=</button>
-		<label id="quot"></label>
-	</div>
-	</div>
+
 	<script>
 		async function add() {
-						let n = document.getElementById("add1");
-						let m = document.getElementById("add2");
-						console.log("button pressed:" + n.value + "+" + m.value);
+			let n = document.getElementById("add1");
+			let m = document.getElementById("add2");
+			console.log("button pressed:" + n.value + "+" + m.value);
 
-						const response = await fetch("https://arithmetic-service-hzd7.onrender.com/add/" + n.value + "/" + m.value);
-						const sum = await response.json();
-						document.getElementById("sum").innerText = sum;
+			const response = await fetch("https://arithmetic-service-hzd7.onrender.com/add/" + n.value + "/" + m.value);
+			const sum = await response.json();
+			document.getElementById("sum").innerText = sum;
 		}
 
 		async function subtract() {
-				let n = document.getElementById("sub1");
-				let m = document.getElementById("sub2");
-				console.log("button pressed:" + n.value + "-" + m.value);
+			let n = document.getElementById("sub1");
+			let m = document.getElementById("sub2");
+			console.log("button pressed:" + n.value + "-" + m.value);
 
-				const response = await fetch("https://arithmetic-service-hzd7.onrender.com/sub/" + n.value + "/" + m.value);
-				const diff = await response.json();
-				document.getElementById("diff").innerText = diff;
+			const response = await fetch("https://arithmetic-service-hzd7.onrender.com/sub/" + n.value + "/" + m.value);
+			const diff = await response.json();
+			document.getElementById("diff").innerText = diff;
 		}
 
 		async function multiply() {
-				let n = document.getElementById("mul1");
-				let m = document.getElementById("mul2");
-				console.log("button pressed:" + n.value + "*" + m.value);
+			let n = document.getElementById("mul1");
+			let m = document.getElementById("mul2");
+			console.log("button pressed:" + n.value + "*" + m.value);
 
-				const response = await fetch("https://arithmetic-service-hzd7.onrender.com/mul/" + n.value + "/" + m.value);
-				const prod = await response.json();
-				document.getElementById("prod").innerText = prod;
+			const response = await fetch("https://arithmetic-service-hzd7.onrender.com/mul/" + n.value + "/" + m.value);
+			const prod = await response.json();
+			document.getElementById("prod").innerText = prod;
 		}
 
 		async function divide() {
-				let n = document.getElementById("div1");
-				let m = document.getElementById("div2");
-				console.log("button pressed:" + n.value + "/" + m.value);
+			let n = document.getElementById("div1");
+			let m = document.getElementById("div2");
+			console.log("button pressed:" + n.value + "/" + m.value);
 
-				const response = await fetch("https://arithmetic-service-hzd7.onrender.com/div/" + n.value + "/" + m.value);
-				const quot = await response.json();
-				document.getElementById("quot").innerText = quot;
+			const response = await fetch("https://arithmetic-service-hzd7.onrender.com/div/" + n.value + "/" + m.value);
+			const quot = await response.json();
+			document.getElementById("quot").innerText = quot;
 		}
 
 		async function isPrime() {
-            const numberToTest = document.getElementById("numberToTest");            
-            let n = numberToTest.value;            
-            const response = await fetch("???" + n);
-            const result = await response.json();
-            document.getElementById("primeCheckResult").innerText = result;
-        }
+			const numberToTest = document.getElementById("numberToTest");
+			let n = numberToTest.value;
+			const response = await fetch("???" + n);
+			const result = await response.json();
+			document.getElementById("primeCheckResult").innerText = result;
+		}
 
-		async function cipher(){
+		async function cipher() {
 			const numberToTest = document.getElementById("textToCipher");
 			let plainText = numberToTest.value;
-			const response = await fetch("https://cipher-service-latest-f7m8.onrender.com/ciphers" + plainText);
+			console.log("cipher button pressed: " + plainText);
+			//const response = await fetch("https://cipher-service-latest-f7m8.onrender.com/ciphers/" + plainText);
+			const response = await fetch("http://localhost:8000/ciphers/caesar/" + plainText + "/2");
+
 			const result = await response.json();
-			document.getElementById("cipher").innerText = result;
+			document.getElementById("cipher").innerText = result.cipher;
 		}
 	</script>
 </body>
+
 </html>
