--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		async function isPrime() {
 			const numberToTest = document.getElementById("numberToTest");
 			let n = numberToTest.value;
-			const response = await fetch("???" + n);
+			const response = await fetch("https://primes-service-latest-l13u.onrender.com/primes/" + n);
 			const result = await response.json();
 			document.getElementById("primeCheckResult").innerText = result;
 		}
@@ -133,8 +133,8 @@
 			const numberToTest = document.getElementById("textToCipher");
 			let plainText = numberToTest.value;
 			console.log("cipher button pressed: " + plainText);
-			//const response = await fetch("https://cipher-service-latest-f7m8.onrender.com/ciphers/" + plainText);
-			const response = await fetch("http://localhost:8000/ciphers/caesar/" + plainText + "/2");
+			const response = await fetch("https://cipher-service-latest-f7m8.onrender.com/ciphers/caesar/" + plainText + "/2");
+			//const response = await fetch("http://localhost:8000/ciphers/caesar/" + plainText + "/2");
 
 			const result = await response.json();
 			document.getElementById("cipher").innerText = result.cipher;
