wrong label name

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			//const response = await fetch("http://localhost:8000/ciphers/caesar/" + plainText + "/2");
 
 			const result = await response.json();
-			document.getElementById("cipher").innerText = result.cipher;
+			document.getElementById("textToCipher").innerText = result.cipher;
 		}
 	</script>
 </body>
